Adiciona imagem ao projeto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Bem-vindo ao meu primeiro projeto no GitHub!</h1>
+    <img src="images/imagem.jpg" alt="Descrição da imagem">
     <p>Este é um exemplo simples para praticar.</p>
 </body>
 </html>
